# Learning-FSM

./: README.md
1-讲解/: 有限状态机.txt
2-示例/1-按键去抖动/: debounce.c
2-示例/1-按键去抖动/参考示例/: debounce.c
2-示例/1-按键去抖动/自制示例/: FSM_debounce.c
2-示例/2-闹钟程序/: Alarm.c
2-示例/3-风扇延时关闭控制/: FSM_fan.c
2-示例/4-电梯/: Riggin_FSM1.c
开源库/EFSM/: CMakeLists.txt  LICENSE  README.md
开源库/EFSM/examples/: CMakeLists.txt  main.c  thread.c
开源库/EFSM/source/: CMakeLists.txt  efsm.h
示例/4-电梯/: FSM_Elevator_demo  FSM_Elevator_demo.c
示例/4-电梯/FSM_Elevator_demo.dSYM/Contents/: Info.plist
示例/4-电梯/FSM_Elevator_demo.dSYM/Contents/Resources/DWARF/: FSM_Elevator_demo
